--- a/styles/style.css
+++ b/styles/style.css
@@ -293,3 +293,105 @@
     font-size: 14px;
     margin: 0;
   }
+
+  .membership {
+    padding: 100px 0 140px;
+    background-color: #057bf2;
+    color: #ffffff;
+  }
+  
+  .membership__title {
+    max-width: 574px;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 44px;
+    font-weight: 500;
+    line-height: 52px;
+  }
+  
+  .membership__steps {
+    list-style-type: none;
+    padding: 0;
+    margin: 100px 0 0;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .step {
+   flex-basis: 220px;
+   row-gap: 40px;
+   width: 220px;
+  }
+  
+  .step__title {
+    margin: 0;
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: 700;
+  }
+  
+  .step__icon {
+    margin-left: 20px;
+  }
+  
+  .step__description {
+    margin: 10px 0 0;
+  }
+  
+  .footer {
+    box-sizing: border-box;
+    background-color: #1f1f1f;
+    color: #ffffff;
+    padding: 60px 80px;
+  }
+  
+  .footer__columns {
+   display: flex;
+  }
+  
+  .footer__column_content_hours {
+    margin-left: auto;
+  }
+  
+  .footer__column_content_social {
+    margin-left: 80px;
+  }
+  
+  .footer__logo {
+    height: 80px;
+    width: 58px;
+    margin-top: 0px;
+    margin-bottom: 100px;
+  }
+  
+  .footer__column-heading {
+    margin-top: 0px;
+    margin-bottom: 20px;
+    justify-content: flex-end;
+  }
+  
+  .footer__list {
+    list-style-type: none;
+    padding: 0px;
+    margin: 0px;
+  }
+  
+  .footer__list-item {
+    padding-top: 16px;
+  }
+  
+  .footer__column-link {
+    color: white;
+    text-decoration: none;
+  }
+  
+  .footer__social-icon {
+    height: 16px;
+    width: 16px;
+    margin-right: 10px;
+  }
+  
+  .footer__copyright {
+    padding-bottom: 60px;
+    padding-left: 80px;
+  }
