--- a/styles/style.css
+++ b/styles/style.css
@@ -315,6 +315,7 @@
   margin: 100px 0 0;
   display: flex;
   justify-content: center;
+  column-gap: 40px;
 }
 
 .step {
@@ -328,6 +329,11 @@
   font-size: 20px;
   line-height: 30px;
   font-weight: 700;
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: flex-start;
 }
 
 .step__icon {
