--- a/styles/style.css
+++ b/styles/style.css
@@ -383,12 +383,16 @@
 }
 
 .footer__list-item {
-  padding-top: 16px;
 }
 
 .footer__column-link {
+  display: flex;
   color: white;
   text-decoration: none;
+  margin-top: 20px;
+  margin-bottom: 16px;
+  column-gap: 80px;
+  align-items: flex-start;
 }
 
 .footer__social-icon {
