--- a/styles/style.css
+++ b/styles/style.css
@@ -386,11 +386,11 @@
 }
 
 .footer__column-link {
-  display: flexbox;
+  display: flex;
   color: white;
   text-decoration: none;
   column-gap: 10px;
-  align-items: start;
+  align-items: center;
 }
 
 .footer__social-icon {
